--- a/test2.cfg
+++ b/test2.cfg
@@ -1,11 +1,6 @@
-S -> A $
-A -> T A
-   | lambda
-T -> VAR equal E
-E -> a plus b
-   | s times t
-   | zero
-   | VAR
-VAR -> e | f | g
-   | h | j | k
-A -> A $
+S -> A B C $
+A -> lambda | E | F
+B -> m n o p
+C -> B A z | A B z
+E -> s | t
+F -> lambda | z E
